static/css/style.css
/* Global rules */
:root {
    --main-font: 'pacifico', 'cursive';
    --secondary-font: 'roboto', sans-serif;
    --main-color: #FFB347;
    --secondary-color: #007bff;
}

body {
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    font-family: var(--secondary-font);
}

main {
    flex: 1;
}

h1, h2, h3, h4 {
    font-family: var(--main-font);
}

.disabled {
    border: none;
}

.btn:disabled {
    border: 0;
    box-shadow: none;
}

#user-dropdown::after,
#bag-dropdown::after {
    display: none;
}

/* MAILCHIMP CSS */

#mc_embed_signup {
    background:var(--main-color);
    clear:left;
    font:14px Helvetica,Arial,sans-serif;
    width: 100%;
    width: 400px;
}

#mc_embed_signup h2 {
    font-size: 2rem !important;
}

.asterisk {
    color: black !important;
    font-size: 1.5rem !important;
}

/* NAVBAR */

.navbar {
    background-color: #FFB347;
    font-size: 2rem;
}

.navbar a > i {
    font-size: 2.5rem;
}

#navbar-search {
    width: 30rem;
    height: 3rem;
}

.fa-magnifying-glass {
    font-size: 1.3rem !important;
    width: 30px;
}

.form-control {
    box-shadow: none;
}

.nav-item {
    margin-left: 10px;
    font-size: 3rem;
}

.navbar-nav .dropdown-menu {
    position: absolute;
    top: 100%;
    right: 0;
    z-index: 1000;
    float: none;
}

ul .dropdown-menu {
    padding: 5px;
    width: 180px;
}

.navbar-brand {
    font-size: 2rem;
}

/* Toasts */

.toast-container {
    position: fixed;
    top: 100px;
    right: 20px;
    z-index: 2000;
    color: black;
}

.bag-toast-container {
    position: fixed;
    top: 100px;
    right: 20px;
    z-index: 2000;
    width: 300px;
}

.toast {
    max-height: 250px;
}

.toast-body {
    max-height: 230px;
    overflow-y: auto;
    flex: 1;
}

/* HERO IMAGE */

/* .hero {
    position: relative;
    height: 80vh;
    background-image: url(/media/hero-image.png);
    background-size: cover;
    background-position: center;
    display: flex;
    align-items: center;
} */

.cta-button {
    display: inline-block;
    padding: 1rem 1.5rem;
    background-color: #FFB347;
    border-radius: 0.4rem;
    font-family: var(--main-font);
    text-decoration: none;
    color: black;
    font-size: 3rem;
}

.cta-button:hover {
    background-color: #ffa322;
    transform: translateY(-3px);
    transition: all 0.3s ease;
}

.hero-content {
    margin-left: 100px;
}

.hero-content p {
    color: white;
}

.hero-content h1 {
    color: white;
    font-size: 6rem;
    font: bold;
}

/* CATEGORY NAVBAR */

#category-navbar li {
    font-size: 2rem;
}

.dropdown-menu a {
    font-size: 0.9rem;
}

#category-navbar .nav-link {
    font-size: 1.5rem;
    color: black;
}

#all-products-nav {
    border-radius: 5px;
}

/* DETAIL BANNER */

.detail-banner-container {
    width: 100%;
    height: 60px;
    background-color: var(--secondary-color);
}

.banner-text {
    height: 60px;
    color: white;
    font-size: 2rem;
    display: flex;
    align-items: center;
    justify-content: center;
}

/* HOME PAGE INFO */

#homepage-info i {
    font-size: 2rem;
    display: block;
}

/* PRODUCT LIST */

.card a {
    text-decoration: none;
    color: black;
}

.button-colour {
    background-color: rgb(250, 250, 250);
    border: 1px solid rgb(134, 134, 134);
}

.button-effect-nav:hover {
    transform: translateY(-2px);
    box-shadow: 0 4px 10px rgba(20, 20, 204, 0.15);
}

.button-effect:hover {
    transform: translateY(-2px);
    box-shadow: 0 4px 10px rgba(20, 20, 204, 0.15);
    background-color: rgb(240, 240, 240);
    border: 1px solid rgb(185, 185, 185);
    border-radius: 5px;
}

#filter-button {
    width: 100px;
    border: none;
    background: none;
    padding: 0;
}

.fa-caret-right {
    transition: transform 0.3s ease;
}

#filter-button.collapsed .fa-caret-right {
    transform: rotate(0deg);
}

#filter-button:not(.collapsed) .fa-caret-right {
    transform: rotate(90deg);
}

/* PRODUCT DETAILS */

.card-buttons .btn {
    height: 50px;
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 0;
    margin: 0;
    width: 100%;
}

/* BAG */

.qty-form input[type="number"] {
    width: 75px;
}

/* BAG / CHECKOUT TABLE */

.bag-table {
    width: 80%;
    margin: auto;
    margin-top: 50px;
    text-align: center;
    border: #FFB347 2px solid;
}

.bag-image {
    width: 40px;
    height: 40px;
    object-fit: cover;
}

/* CHECKOUT */

#id_country {
    border: 1px solid black;
}

/* REVIEWS */
/* TAKEN FROM MY PROJECT 4 */


.stars {
    display: flex;
    flex-direction: row-reverse;
}

.stars input {
    display: none;
}

.stars label i {
    font-size: 3rem;
    color: grey;
}

.stars label:hover i,
.stars label:hover ~ label i {
    color: rgb(255, 217, 0);
}

.stars input:checked ~ label i {
    color: rgb(255, 217, 0);
}


/* FOOTER */

#footer a:hover {
    color: var(--secondary-color);
}

#footer {
    width: 100%;
    background-color: #FFB347;
    bottom: 0;
    padding: 50px;
}

#footer li {
    list-style-type: none;
    text-decoration: none;
}

#footer ul {
    padding: 0;
}

#footer li a {
    color: black;
    text-decoration: none;
}

#hygiene-rating img {
    width: 100px;
}

.socials a {
    text-decoration: none;
    color: black;
}

/* ALLAUTH TEMPLATES */

.form-check .form-check-input {
    float: none;
}

#id_password1_helptext ul {
    list-style-type: none;
    padding: 0;
    margin-top: 10px;
    margin-bottom: 10px;
}

/* 404-image */

.image-404 {
    width: 300px;
}

/* REMOVE ARROWS FROM INPUT BOX TAKEN FROM https://www.w3schools.com/howto/howto_css_hide_arrow_number.asp */
/* Chrome, Safari, Edge, Opera */
input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
-webkit-appearance: none;
margin: 0;
}

/* Firefox */
input[type=number] {
    -moz-appearance: textfield;
    appearance: textfield;
}

/* REMOVE FOCUS ON SEARCH BAR TAKEN FROM https://stackoverflow.com/questions/3397113/how-to-remove-focus-border-outline-around-text-input-boxes-chrome */

.form-control:focus,
#id_country:focus,
input[type="checkbox"]:focus {
    border-color: inherit;
    -webkit-box-shadow: none;
    box-shadow: none;
}


@media (max-width: 756px) {
    .hero {
        background-position: left center;
    }

    .hero-content {
        text-align: center;
        margin: auto;
    }

    .hero-content p {
        margin: 0 auto;
        margin-bottom: 50px;
    }

    .banner-text {
        font-size: 1.2rem;
    }

    #mc_embed_signup {
        width: 200px;
    }

    .toast-container,
    .bag-toast-container {
        right: 10px;
    }
}

@media (max-width: 576px) {

    .hero-content p {
        margin-top: 20px;
        margin-bottom: 25px;
    }
    
    .hero-content a {
        font-size: 1rem;
    }

    .hero-content h1 {
        font-size: 3rem;
    }

    .bag-table {
        padding-left: 10px;
    }

    #order-ref-text {
        font-size: 0.9rem;
    }

    .toast-container,
    .bag-toast-container {
        left: 50%;
        right: auto;
        transform: translateX(-50%);
        width: 90%;
        max-width: 400px;
        top: 20px;
    }
}

